--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@
 			<section class="presentation">
 				<div class="introduction">
 					<div class="intro-text">
-						<h1>Laptop for the future</h1>
+						<h1>Alex Berger</h1>
 						<p>
-							The new 14 inch bezeless display oferring a 4k
-							display with touch screen.
+							Software Engineer
 						</p>
 					</div>
 					<div class="cta">
-						<button class="cta-select">14 Inch</button>
-						<button class="cta-add">Add To Cart</button>
+						<button class="cta-select">Github</button>
 					</div>
 				</div>
 				<div class="cover">
