--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</p>
 					</div>
 					<div class="cta">
-						<button class="cta-select" onclick="windows.location.href=https://github.com/Code-Of-Practice">Github</button>
+						<button class="cta-select" onclick="windows.location.href=https://github.com/Code-Of-Practice';">Github</button>
 					</div>
 				</div>
 				<div class="cover">
