--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</p>
 					</div>
 					<div class="cta">
-						<button onclick="windows.location.href=https://github.com/Code-Of-Practice';" class="cta-select">Github</button>
+						<button class="cta-select">Github</button><a href=“https://github.com/Code-Of-Practice/”></a>
 					</div>
 				</div>
 				<div class="cover">
