--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					</div>
 					<div class="cta">
 						<button class="cta-select">Github</button><a href=“https://github.com/Code-Of-Practice/”></a>
-<button type=“button”><a href=“https://github.com/Code-Of-Practice/”>Github</a></button>
+<button type=“button”><a windows.location.href=“https://github.com/Code-Of-Practice/”>Github</a></button>
 					</div>
 				</div>
 				<div class="cover">
