--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</p>
 					</div>
 					<div class="cta">
-						<button class="cta-select" <a>href="https://github.com/Code-Of-Practice/">Github</a></button>
+						<button class="cta-select" <a>href="https://github.com/Code-Of-Practice/">Github</button></a>
 						<button type=“button”><a windows.location.href=“https://github.com/Code-Of-Practice/”>Github</a></button>
 					</div>
 				</div>
