--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</p>
 					</div>
 					<div class="cta">
-						<button class="cta-select" <a href="https://github.com/Code-Of-Practice/"Github</button></a>
+						<a href="https://github.com/Code-Of-Practice/"><button class="cta-select">Github</button></a>
 					</div>
 				</div>
 				<div class="cover">
